Fix styles for navbar title on mobile devices

--- a/static/css/components/main.css
+++ b/static/css/components/main.css
@@ -14,7 +14,9 @@
 
 @media screen and (max-width: 1024px) {
   .main .content {
-    padding-left: 260px; } }
+    padding-left: 260px; }
+    .main .content.nomenu {
+      padding-left: 0; } }
 
 @media screen and (max-width: 860px) {
   .main .content {
