--- a/static/css/style.css
+++ b/static/css/style.css
@@ -619,6 +619,11 @@ body {
     .group-settings .form:last-child {
       margin-right: 0; }
 
+.login .navbar, .register .navbar {
+  justify-content: center; }
+  .login .navbar .title, .register .navbar .title {
+    display: flex; }
+
 @media screen and (max-width: 980px) {
   .group-settings {
     display: flex;
@@ -1139,7 +1144,9 @@ body {
 
 @media screen and (max-width: 1024px) {
   .main .content {
-    padding-left: 260px; } }
+    padding-left: 260px; }
+    .main .content.nomenu {
+      padding-left: 0; } }
 
 @media screen and (max-width: 860px) {
   .main .content {
